# xorgdata

./: .gitignore  .travis.yml  MANIFEST.in  Makefile  README.rst  example_settings.ini  manage.py  pyproject.toml  requirements_dev.txt  setup.py  tox.ini
.github/workflows/: ci.yml
alumnforce_csv/: csv_format.py
scripts/: parse_alumnforce_csv.py
tests/: test_base.py  test_exportforauth.py  test_importallusers.py  test_importcsv.py  test_views.py
tests/files/: export-users-20010203-040506.csv  exportgroupmembers-afbo-Polytechnique-X-20010203.csv  exportgroups-afbo-Polytechnique-X-20010203.csv  exportuserdegrees-afbo-Polytechnique-X-20010203.csv  exportuserjobs-afbo-Polytechnique-X-20010203.csv  exportusers-afbo-Polytechnique-X-20010203.csv
xorgdata/: settings.py  urls.py  wsgi.py
xorgdata/alumnforce/: admin.py  apps.py  models.py  views.py
xorgdata/alumnforce/full_export/: convert_csv_to_json.py  convert_json_to_csv.py
xorgdata/alumnforce/full_export/lib/: converters.py  csv_format.py
xorgdata/alumnforce/management/commands/: afsync.py  exportforauth.py  importallusers.py  importcsv.py
xorgdata/alumnforce/migrations/: 0001_initial.py  0002_make_integer_fields_nullable.py  0002_rename_admission_path.py  0003_create_group_tables.py  0004_add_last_update.py  0005_add_log_table.py  0006_make_xorg_id_null.py  0007_make_roles_a_list.py  0008_reorder_kinds.py  0009_remove_unique_user_ids.py  0010_allow_null_fields_in_userdegree.py  0011_name_related_fields.py  0012_fix_membership_typo.py  0013_support_deleted_accounts.py  0014_add_exportlog_table.py  0015_alter_academicinformation_diplomed_and_more.py
xorgdata/templates/: base.html
xorgdata/templates/xorgdata/: issues.html  summary.html
xorgdata/utils/: fields.py
